[package]
name = "find-my-device"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
directories = "6.0.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
teloxide = "0.15.0"
tokio = { version = "1.45.0", features = ["full"] }
urlencoding = "2.1.3"
